Arrays.asList()をList.of()に置換してモダンなJava記法に更新
🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>